- Corrected mistranslations and bad weapon and vehicle entries for Datapuls Hamburg content. Existing characters that use these items will usually need to remove and re-add them to see any changes.
- Corrected mistranslations, bad weapon entries, and missing content from Datapuls SOTA 2080. Existing characters that use these items will usually need to remove and re-add them to see any changes.
- Added missing content from Datapuls SOX and the German versions of Parabotany, Parageology, and Parazoology (all of which are for SR5e). 
- Armor mods for custom liners have now had their categories renamed to be more generic.
- Foci, formulae, and magical supplies and compounds will now use "Force" instead of "Rating" where appropriate.

Fixes implemented by BM123499

Armor.xml

    Added missing <armor> entry for Parachute.
    Added missing armor_capacity attribute for Pantheon Quick-Charge Battery Pack.

Critterpowers.xml

    Removed legacy SR4‑only power.
    Standardized hyphenation: Low-Light, Wire-band using minus signs.
    Added automotive powers.
    Added “Fold Perception” and “Agonizing Pain” from Howling Shadows (HS).

Critters.xml

    Renamed Baboon → Ozian Baboon (per source text).
    Removed “Wyrd Mantis” (SR4‑only).
    Populated missing <initiative>, <magic>, <resonance>, and <depth> fields for several critters.
    Remove unintended character across the file.
    Applied <rating> to skill and automotive powers; replaced stray <select>.
    Corrected power and quality names:
        Sillence → Silence
        Devour → Devouring
        Substance Extrusion → Secretion/Substance Extrusion
        Shadowing → Sneaking
        Improved Senses → Enhanced Senses
        Spell Resistance → Magic Resistance
        Banishing → Banishing Resistance
        Fae Glamour → Fey Glamour
        Regenerate → Regeneration
        Throw Weapon → Throwing Weapon
        Deezz → Derezz
        Real World Naivete → Real World Naiveté
    Re-classified: