@@ -148,7 +148,8 @@ Data Changes:
 - Corrected multiple incorrect or faulty entries in State of the Art ADL content, including some weapons, some vehicles, the Svetoid tradition, the Squirrel mentor spirit, the Cyberdynamix Special HardCore and MCT Dusseldorf commlinks, and the Rheingold Pro Tec Plus Coat and Franzinger Fashion Tenor Coat armors. Existing characters that use these items will usually need to remove and re-add them to see any changes.
 - Corrected mistranslations and bad weapon and vehicle entries for Datapuls Hamburg content. Existing characters that use these items will usually need to remove and re-add them to see any changes.
 - Corrected mistranslations, bad weapon entries, and missing content from Datapuls SOTA 2080. Existing characters that use these items will usually need to remove and re-add them to see any changes.
-- Added missing content from Datapuls SOX and the German versions of Parabotany, Parageology, and Parazoology (all of which are for SR5e). 
+- Added missing content from Datapuls SOX and the German versions of Parabotany, Parageology, and Parazoology (all of which are for SR5e).
+- Added missing content from Shadows in Focus: Casablanca-Rabat.
 - Armor mods for custom liners have now had their categories renamed to be more generic.
 - Foci, formulae, and magical supplies and compounds will now use "Force" instead of "Rating" where appropriate.
 
